--- a/areas/arm64/board_espressobin09_setup.org
+++ b/areas/arm64/board_espressobin09_setup.org
@@ -356,3 +356,79 @@ Could not load file '/etc/sysconfig/network-scripts/ifcfg-wan'
 Error: unknown connection '/etc/sysconfig/network-scripts/ifcfg-wan'.
 #+end_example
 
+
+* Installing extra software
+
+** Installing LLVM version 9
+
+It is a priority to get LLVM9 working on arm64.
+#+begin_example
+dnf install -y llvm
+
+Last metadata expiration check: 0:00:03 ago on Tue 19 Nov 2019 09:20:48 AM EST.
+Dependencies resolved.
+================================================================================
+ Package           Architecture    Version                 Repository      Size
+================================================================================
+Installing:
+ llvm              aarch64         9.0.0-1.fc31            fedora         4.2 M
+Installing dependencies:
+ llvm-libs         aarch64         9.0.0-1.fc31            fedora          20 M
+
+Transaction Summary
+================================================================================
+Install  2 Packages
+
+Total download size: 24 M
+Installed size: 107 M
+#+end_example
+
+Success and 'llc --version' shows a lot of targets, including BPF.
+#+begin_example
+# llc --version
+LLVM (http://llvm.org/):
+  LLVM version 9.0.0
+  Optimized build.
+  Default target: aarch64-unknown-linux-gnu
+  Host CPU: cortex-a53
+
+  Registered Targets:
+    aarch64    - AArch64 (little endian)
+    aarch64_32 - AArch64 (little endian ILP32)
+    aarch64_be - AArch64 (big endian)
+    amdgcn     - AMD GCN GPUs
+    arm        - ARM
+    arm64      - ARM64 (little endian)
+    arm64_32   - ARM64 (little endian ILP32)
+    armeb      - ARM (big endian)
+    avr        - Atmel AVR Microcontroller
+    bpf        - BPF (host endian)
+    bpfeb      - BPF (big endian)
+    bpfel      - BPF (little endian)
+    hexagon    - Hexagon
+    lanai      - Lanai
+    mips       - MIPS (32-bit big endian)
+    mips64     - MIPS (64-bit big endian)
+    mips64el   - MIPS (64-bit little endian)
+    mipsel     - MIPS (32-bit little endian)
+    msp430     - MSP430 [experimental]
+    nvptx      - NVIDIA PTX 32-bit
+    nvptx64    - NVIDIA PTX 64-bit
+    ppc32      - PowerPC 32
+    ppc64      - PowerPC 64
+    ppc64le    - PowerPC 64 LE
+    r600       - AMD GPUs HD2XXX-HD6XXX
+    riscv32    - 32-bit RISC-V
+    riscv64    - 64-bit RISC-V
+    sparc      - Sparc
+    sparcel    - Sparc LE
+    sparcv9    - Sparc V9
+    systemz    - SystemZ
+    thumb      - Thumb
+    thumbeb    - Thumb (big endian)
+    wasm32     - WebAssembly 32-bit
+    wasm64     - WebAssembly 64-bit
+    x86        - 32-bit X86: Pentium-Pro and above
+    x86-64     - 64-bit X86: EM64T and AMD64
+    xcore      - XCore
+#+end_example
