areas/arm64: Correction using Fedora 31 "raw" image
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_espressobin09_setup.org
+++ b/areas/arm64/board_espressobin09_setup.org
@@ -80,7 +80,7 @@ Environment size: 1477/65532 bytes
 * Creating Fedora 31 rootfs.tar
 
 This section describe the manual process of creating a rootfs for ARM64,
-based off the Fedora 31 aarch64 ISO image.
+based off the Fedora 31 aarch64 "raw" image.
 
 ** Official fedora approach
 
